--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/src/assets/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jade pofol</title>
   </head>
